[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptchat"
version = "0.0.4"
python_requires = ">=3.10"
description = "A local ChatGPT interface"
authors = [
    {name = "Ryan Young", email = "dev@ryayoung.com"}
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ryayoung/gptchat"
repository = "https://github.com/ryayoung/gptchat"
documentation = "https://gptchat.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    'requests',
    'pydantic>=2.0',
    'openai>=1.0.0',
    'Flask-SocketIO',
    'eventlet',
]

[tool.hatch.build.targets.wheel.force-include]
"build" = "build"
